--- a/services.html
+++ b/services.html
@@ -2,40 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Our Services - Ragnar Gudmundsson Law Firm</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">Ragnar Gudmundsson Law Firm</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html" class="active">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul class="navbar">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html" class="active">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <main>
+    <section class="page-title">
+      <h2>Our Legal Services</h2>
+      <p>Providing expert legal guidance with professionalism and integrity.</p>
+    </section>
 
-  <!-- Services Content -->
-  <div class="container">
-    <h1>Our Legal Services</h1>
-    <p>We provide expert legal support across a wide range of practice areas tailored to your unique situation.</p>
+    <section class="services">
+      <div class="service-card">
+        <h3>Family Law</h3>
+        <p>Divorce, custody, and adoption cases handled with compassion and precision.</p>
+      </div>
 
-    <h2>Practice Areas</h2>
-    <ul class="services-list">
-      <li><strong>📄 Legal Consultation & Advice:</strong> Strategic legal advice tailored to your needs.</li>
-      <li><strong>📝 Contract Drafting & Review:</strong> We draft and vet contracts with precision and clarity.</li>
-      <li><strong>🏛️ Court Representation:</strong> Confident and experienced representation in legal proceedings.</li>
-      <li><strong>🤝 Mediation & Conflict Resolution:</strong> Effective and discreet resolution to disputes.</li>
-      <li><strong>📂 Corporate Legal Services:</strong> Legal support for startups, corporations, and partnerships.</li>
-    </ul>
-  </div>
+      <div class="service-card">
+        <h3>Criminal Defense</h3>
+        <p>Strong defense for clients facing criminal charges — from misdemeanors to felonies.</p>
+      </div>
 
-  <!-- Footer -->
-  <div class="footer">
-    &copy; 2025 Ragnar Gudmundsson. All rights reserved.
-  </div>
+      <div class="service-card">
+        <h3>Immigration Law</h3>
+        <p>Visa applications, deportation defense, asylum cases, and more.</p>
+      </div>
 
+      <div class="service-card">
+        <h3>Real Estate Law</h3>
+        <p>Property transactions, disputes, and landlord-tenant matters.</p>
+      </div>
+
+      <div class="service-card">
+        <h3>Corporate Law</h3>
+        <p>Legal guidance for businesses — from startups to established corporations.</p>
+      </div>
+    </section>
+
+    <!-- Accreditation Section -->
+    <section class="accreditations">
+      <h2>Our Accreditations</h2>
+      <div class="accreditation-logos">
+        <img src="images/accreditation1.jpg" alt="Accreditation 1" />
+        <img src="images/accreditation2.jpg" alt="Accreditation 2" />
+        <img src="images/accreditation3.jpg" alt="Accreditation 3" />
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Ragnar Gudmundsson Law Firm. All rights reserved.</p>
+  </footer>
 </body>
 </html>
