--- a/services.html
+++ b/services.html
@@ -55,9 +55,9 @@
     <section class="accreditations">
       <h2>Our Accreditations</h2>
       <div class="accreditation-logos">
-        <img src="images/accreditation1.jpg" alt="Accreditation 1" />
-        <img src="images/accreditation2.jpg" alt="Accreditation 2" />
-        <img src="images/accreditation3.jpg" alt="Accreditation 3" />
+        <img src="images/accreditation1.png" alt="Accreditation 1" />
+        <img src="images/accreditation2.png" alt="Accreditation 2" />
+        <img src="images/accreditation3.png" alt="Accreditation 3" />
       </div>
     </section>
   </main>
